--- a/client/.env.production
+++ b/client/.env.production
@@ -1,1 +1,3 @@
 VITE_API_URL=https://smart-classroom-monitoring-system-9vuh.onrender.com
+VITE_SOCKET_URL=https://smart-classroom-monitoring-system-9vuh.onrender.com
+
